# klipyt

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.refresher  fly.toml  pyproject.toml  start.sh
backend/app/: __init__.py  config.py  main.py
backend/app/api/: admin.py  ai_video.py  health.py  jobs.py  schemas.py  tts.py  uploads.py
backend/app/auth/: __init__.py  cookies.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/mimo/: __init__.py  client.py  types.py
backend/app/pipeline/: __init__.py  ai_video.py  captions.py  clip.py  dub.py  highlight.py  ingest.py  runner.py  subtitle.py  transcribe.py  voice_hook.py
backend/app/storage/: __init__.py  local.py  s3.py
backend/app/workers/: __init__.py  queue.py  tasks.py
backend/scripts/: README.md  refresh_youtube_cookies.py  setup_youtube_cookies.py
backend/tests/: conftest.py  test_captions.py  test_cookies.py  test_highlight_parsing.py  test_mimo_client.py  test_subtitle.py
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/jobs/[id]/: page.tsx
frontend/src/components/: ai-video-tabs.tsx  clip-card.tsx  source-input.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  input.tsx
frontend/src/lib/: api.ts  utils.ts
