[project]
name = "mager-klip-backend"
version = "0.1.0"
description = "Mager Klip backend — auto-clip generator powered by Xiaomi MiMo"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "aiosqlite>=0.20",
    "redis>=5.0",
    "rq>=1.16",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "boto3>=1.34",
    "yt-dlp>=2026.3.17",
    "faster-whisper>=1.0.3",
    "ffmpeg-python>=0.2",
    "mediapipe>=0.10.14",
    "opencv-python-headless>=4.10",
    "Pillow>=10.4",
    "numpy>=1.26",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/db/migrations/**" = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
